# Relay

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  chat.cmd  chat.py  client.py  config.py  env_detect.py  exceptions.py  relay_config.py  session.py  spinner.py  test_integration.py  tools.py  ui.py
docs/: design.md
prompts/: system.md
scripts/: install.bat
src/: app.rs  client.rs  config.rs  env.rs  error.rs  main.rs  memory.rs  message.rs  mode.rs  reflect.rs  setup.rs  skill.rs  supervisor.rs  term.rs  tools.rs  tui.rs  ui.rs
tools/: install.bat  uninstall.bat  update.bat
