[package]
name = "relay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
dirs = "5"
regex = "1"
walkdir = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
futures-core = "0.3"
pin-project = "1"
once_cell = "1"
which = "7"
glob = "0.3"
crossterm = "0.28"
ratatui = { version = "0.28", optional = true }

[features]
default = ["tui"]
tui = ["ratatui"]

[[bin]]
name = "relay"
path = "src/main.rs"
